# vault-of-games

vault-of-games-core/: .gitignore  Cargo.toml
vault-of-games-core/migrations/: 20211120202933_setup.sql
vault-of-games-core/src/: error.rs  main.rs  processor.rs  router.rs  server.rs
vault-of-games-core/src/authentication/: error.rs  keys.rs  middleware.rs  mod.rs
vault-of-games-core/src/database/: mod.rs
vault-of-games-core/src/endpoints/: mod.rs
vault-of-games-core/src/endpoints/games/: entities.rs  mod.rs  processor.rs  router.rs
vault-of-games-core/src/endpoints/games/entities/: mod.rs  payloads.rs
vault-of-games-core/src/endpoints/users/: mod.rs  processor.rs  router.rs
vault-of-games-core/src/endpoints/users/entities/: mod.rs  payloads.rs
