[package]
name = "vault-of-games-core"
version = "0.1.0"
authors = ["Giorgi Beriashvili"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.3.3", features = ["headers"] }
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
headers = "0.3"
hyper = { version = "0.14", features = ["full"] }
jwt-simple = "0.10"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.1.2", features = ["auth", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
